syntax = "proto3";

package monitoring;

option go_package = "/monitoringpb";

service SystemMonitoring {
    rpc CollectMetrics (CollectParams) returns (stream Result) {}
}

message CollectParams {
    int64 NotifyInterval = 1;
    int64 AverageInterval = 2;
}

message Metric {
    string name = 1;
    double value = 2;
}

message Label {
    string name = 1;
    string value = 2;
}

message Group {
    repeated Metric metric = 1;
    repeated Label label = 2;
}

message Metrics {
    string name = 1;
    repeated Group groups = 2;
}

message Result {
    repeated Metrics metrics = 1;
}